--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "classname": "0.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^2.17.0",
     "gray-matter": "^4.0.2",
+    "moment": "^2.29.1",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "sass": "^1.32.7"
+    "sass": "^1.32.7",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.0",
     "postcss-preset-env": "^6.7.0",
     "precss": "^4.0.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
   }
 }
