--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo": "^2.32.1",
     "bcrypt": "^5.0.0",
     "classname": "0.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^2.17.0",
+    "gpl": "0.0.1",
     "gray-matter": "^4.0.2",
     "moment": "^2.29.1",
     "next": "^10.0.0",
@@ -20,7 +22,8 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "sass": "^1.32.7",
-    "serverless-mysql": "^1.5.4"
+    "serverless-mysql": "^1.5.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
