--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "apollo": "^2.32.1",
     "bcrypt": "^5.0.0",
+    "bulma": "^0.9.2",
     "classname": "0.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^2.17.0",
